--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -32,7 +32,7 @@ body {
 body {
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 1px rgba(0,0,0,.5);
+  /*text-shadow: 0 1px 1px rgba(0,0,0,.5);*/
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -141,7 +141,7 @@ body {
   }
   .mastfoot {
     position: fixed;
-    bottom: 0;
+    bottom: -2em;
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
