--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,16 +20,22 @@ h2 {
 
 
 p {
-  text-align: center;  
+  text-align: justify-all;  
   font-family: Verdana;
-  font-size: 12pt;
+  font-size: 12.5pt;
   color: #330000;
   margin: 2em;
 }
 
+p.medium {
+    font-size: 12.5pt;
+    margin-top: 40px;
+
+}
+
 img.small {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   position: relative;
   margin: 0px auto;
   float: left;
@@ -40,7 +46,7 @@ img.small {
 .img-circle {
   width: 250px;
   height: 150px;
-  margin-top: 10px;
+  margin-top: -20px;
   margin-left:0;
   border-radius: 50%;
 }
@@ -103,24 +109,30 @@ h2 {
     margin-bottom: 1.6rem;
 }
 
+.cover-heading{
+    margin-bottom: 60px;
+}
+
+
+
 .wrapper {
     max-width: 550px;
-    /*margin: 50px auto;*/
-    /*padding-left: 1em;
-    padding-right: 1em;*/
+    margin: 50px auto;
+    padding-left: 1em;
+    padding-right: 1em;
     position: relative;
     margin: 0;
     float: left;
     margin-left: -15em;
     margin-right: 1em;
-    margin-bottom: 3em;
+   /* margin-bottom: 3em;*/
 }
 
 .wrappertwo {
     max-width: 550px;
-    /*margin: 50px auto;*/
-    /*padding-left: 1em;
-    padding-right: 1em;*/
+    margin: 50px auto;
+    padding-left: 1em;
+    padding-right: 1em;
     position: absolute;
     margin: 0;
     float: right;
